@@ -95,13 +95,13 @@ public class LDAPUtils {
 			
 			// Delete user groups
 			if (importPrivilegesFromLdap) {
-				dbms.execute("DELETE FROM UserGroups WHERE userId=?", new Integer(id));
+				dbms.execute("DELETE FROM UserGroups WHERE userId=?", Integer.valueOf(id));
 			}
 		}
 
 		// Add user groups
 		if (importPrivilegesFromLdap && !Profile.ADMINISTRATOR.equals(user.getProfile())) {
-			dbms.execute("DELETE FROM UserGroups WHERE userId=?", new Integer(id));
+			dbms.execute("DELETE FROM UserGroups WHERE userId=?", Integer.valueOf(id));
 			for(Map.Entry<String, String> privilege : user.getPrivileges().entries()) {
 				// Add group privileges for each groups
 				
@@ -121,8 +121,8 @@ public class LDAPUtils {
 					// If LDAP group does not exist in local database, create it
 					groupId = serialFactory.getSerial(dbms, "Groups") + "";
 					String query = "INSERT INTO GROUPS(id, name) VALUES(?,?)";
-					dbms.execute(query, new Integer(groupId), groupName);
-					Lib.local.insert(dbms, "Groups", new Integer(groupId), groupName);
+					dbms.execute(query, Integer.valueOf(groupId), groupName);
+					Lib.local.insert(dbms, "Groups", Integer.valueOf(groupId), groupName);
 				} else if (groupRecord != null) {
 					groupId = groupRecord.getChildText("id");
 				}
@@ -132,11 +132,11 @@ public class LDAPUtils {
 						Log.debug(Geonet.LDAP, "  - Add LDAP group " + groupName + " for user.");
 					}
 					
-					Update.addGroup(dbms, new Integer(id), new Integer(groupId), profile);
+					Update.addGroup(dbms, Integer.valueOf(id), Integer.valueOf(groupId), profile);
 					
 					try {
 						if (profile.equals(Profile.REVIEWER)) {
-							Update.addGroup(dbms, new Integer(id), new Integer(
+							Update.addGroup(dbms, Integer.valueOf(id), Integer.valueOf(
 									groupId), Profile.EDITOR);
 						}
 					} catch (Exception e) {
